--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> <!-- Declara o documento como HTML5 -->
 <html lang="pt-BR"> <!-- Idioma principal da página -->
 <head>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png" type="image/png">
   <!-- =====================================================================
        META BÁSICO
        ===================================================================== -->
