--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html> <!-- Declara o documento como HTML5 -->
 <html lang="pt-BR"> <!-- Idioma principal da página -->
 <head>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png" type="image/png">
   <!-- =====================================================================
        META BÁSICO
        ===================================================================== -->
@@ -10,6 +9,8 @@
   <!-- Torna o layout responsivo em dispositivos móveis -->
 
   <title>Newtonius</title> <!-- Texto exibido na aba/navegador -->
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png" type="image/png" sizes="any">
+  <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png">
 
   <!-- =====================================================================
        FONT AWESOME – Biblioteca de ícones (usada no “X” do modal PDF)
