--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <!-- Torna o layout responsivo em dispositivos móveis -->
 
   <title>Newtonius</title> <!-- Texto exibido na aba/navegador -->
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png" type="image/png" sizes="any">
-  <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png">
+<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png?v=2" type="image/png">
 
   <!-- =====================================================================
        FONT AWESOME – Biblioteca de ícones (usada no “X” do modal PDF)
