--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Torna o layout responsivo em dispositivos móveis -->
 
-<link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4941/4941259.png?v=2" type="image/png">
+  <title>Newtonius</title> <!-- Texto exibido na aba/navegador -->
 
   <!-- =====================================================================
        FONT AWESOME – Biblioteca de ícones (usada no “X” do modal PDF)
