--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- Torna o layout responsivo em dispositivos móveis -->
 
   <title>Newtonius</title> <!-- Texto exibido na aba/navegador -->
+  <link rel="icon" href="flavicon.png" type="image/png" sizes="any">
+
 
   <!-- =====================================================================
        FONT AWESOME – Biblioteca de ícones (usada no “X” do modal PDF)
